<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <EditText
        android:layout_margin="@dimen/password_change_margin"
        android:id="@+id/activity_password_change_old_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_enter_height"
        android:singleLine="true"
        android:background="@drawable/login_username_background"
        android:drawableLeft="@drawable/login_password_left_bitmap"
        android:hint="@string/old_password_hint"
        android:inputType="textPassword"/>

    <EditText
        android:layout_margin="@dimen/password_change_margin"
        android:id="@+id/activity_password_change_new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_enter_height"
        android:singleLine="true"
        android:background="@drawable/login_username_background"
        android:drawableLeft="@drawable/login_password_left_bitmap"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"/>

    <EditText
        android:layout_margin="@dimen/password_change_margin"
        android:id="@+id/activity_password_change_reenter_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_enter_height"
        android:singleLine="true"
        android:background="@drawable/login_username_background"
        android:drawableLeft="@drawable/login_password_left_bitmap"
        android:hint="@string/reenter_password_hint"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/activity_password_change_button"
        android:layout_margin="@dimen/password_change_margin"
        android:text="@string/password_change_button_title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/toolbar_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_enter_height"/>

</LinearLayout>