<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="bottom"
              android:background="@drawable/login_background"
              android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TableRow android:layout_width="match_parent">

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_enter_height"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:background="@drawable/login_username_background"
                android:drawableLeft="@drawable/login_username_left_bitmap"
                android:hint="@string/user_name"/>
        </TableRow>

        <TableRow android:layout_width="match_parent">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_enter_height"
                android:layout_weight="1"
                android:background="@drawable/login_username_background"
                android:drawableLeft="@drawable/login_password_left_bitmap"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </TableRow>
    </TableLayout>

    <ImageButton
        android:id="@+id/login_bt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_enter_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="#00000000"
        android:contentDescription="@string/login_button"
        android:gravity="center"
        android:onClick="LoginButton"
        android:scaleType="centerCrop"
        android:src="@drawable/login_button_anim"/>

    <LinearLayout
        android:id="@+id/check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/loginSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/login_save"/>

        <CheckBox
            android:id="@+id/loginAuto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/login_auto"/>
    </LinearLayout>

</LinearLayout>